--- a/sled_collections/templates/sled_collections/collection_create_form.html
+++ b/sled_collections/templates/sled_collections/collection_create_form.html
@@ -5,13 +5,13 @@
 <h1>Make Collection</h1>
 <p>Keeping things nice and tidy</p>
 
-<div class="content">
+<div>
   <form id="ids-form" method="POST">
     {% csrf_token %}
     {{ form.obj_type }}
     {{ form.all_items }}
     
-    <table class="master">
+    <table>
       <tr><td>{{ form.name.errors }}</td><td>{{ form.name.label_tag }}</td><td>{{ form.name }}</td></tr>
       <tr><td>{{ form.description.errors }}</td><td>{{ form.description.label_tag }}</td><td>{{ form.description }}</td></tr>
       <tr><td>{{ form.myitems.errors }}</td><td>{{ form.myitems.label_tag }}</td><td>{{ form.myitems }}</td></tr>
