--- a/sled_collections/templates/sled_collections/collection_list2.html
+++ b/sled_collections/templates/sled_collections/collection_list2.html
@@ -1,5 +1,5 @@
 <h1>My collections</h1>
-<div class="content ">
+<div>
   {% if collections %}
   <table>
     {% for collection in collections %}
@@ -20,5 +20,5 @@
   </p>
   {% endif %}
 </div>
-<div class="controls">
+<div>
 </div>
