--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -5,8 +5,7 @@
 <!-- Modal div -->
 <div class="modal fade" id="id-modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-    </div>
+    <div class="modal-content"></div>
   </div>
 </div>
 
@@ -19,16 +18,20 @@
 
 <div class="section">
   <h1>My details</h1>
-  <div class="content container">
-    <table class="sortable">
-      <tr>
-	<th class="th-center">Name</th>
-	<th class="th-center">Affiliation</th>    
-      </tr>
-      <tr>
-	<td class="td-center">{{user.username}}</td>
-	<td class="td-center">{{user.affiliation}}</td>
-      </tr>
+  <div>
+    <table>
+      <thead>
+	<tr>
+	  <th>Name</th>
+	  <th>Affiliation</th>    
+	</tr>
+      </thead>
+      <tbody>
+	<tr>
+	  <td>{{ user.username }}</td>
+	  <td>{{ user.affiliation }}</td>
+	</tr>
+      </tbody>
     </table>
   </div>
 </div>
@@ -36,19 +39,28 @@
 
 <div class="section">
   <h1>My Groups</h1>
-  <div class="content container">
-    <table class="sortable">
-      <tr>
-	<th class="th-center">Name</th>
-	<th class="th-center">Description</th>  
-      </tr>
-      {% for group in user.getGroupsIsMember %}
-      <tr>
-	<td class="td-center"><a href="{{ group.get_absolute_url }}">{{group.name}}</td>
-	<td class="td-center">{{group.description}}</td>  
-      </tr>
-      {% endfor %}
+  <div>
+    {% if user.getGroupsIsMember|length > 0 %}
+    <table>
+      <thead>
+	<tr>
+	  <th>Name</th>
+	  <th>Description</th>  
+	</tr>
+      </thead>
+      <tbody>
+	{% for group in user.getGroupsIsMember %}
+	<tr>
+	  <td><a href="{{ group.get_absolute_url }}">{{group.name}}</td>
+	  <td>{{group.description}}</td>  
+	</tr>
+	{% endfor %}
+      </tbody>
     </table>
+    {% else %}
+    <p>No groups to display</p>
+    {% endif %}
+    <a href="{% url 'groups:group-list' %}">All my groups</a>
   </div>
 </div>
 
@@ -57,7 +69,7 @@
   <h1>Pending Tasks ({{ N_tasks }})</h1>
   <div>
     {% if N_tasks > 0 %}
-    <table class="tasks sortable">
+    <table>
       <thead>
 	<tr>
 	  <th>Type</th>
@@ -89,7 +101,7 @@
   <h1>New Notifications ({{ unread_notifications|length }})</h1>
   <div>
     {% if unread_notifications %}
-    <table class="notifications sortable">
+    <table>
       <thead>
 	<tr>
 	  <th>Sender</th>
@@ -119,9 +131,9 @@
 
 <div class="section">
   <h1>My Collections ({{ collections|length }}) </h1>
-  <div class="content ">
+  <div>
     {% if collections %}
-    <table class="collections">
+    <table>
       <thead>
 	<tr>
 	  <th>Name</th>
@@ -151,7 +163,7 @@
 
 <div class="section">
   <h1>My Lenses ({{ lenses|length }}) </h1>
-  <div class="content ">
+  <div>
     <form id="ids-form" method="POST">
       {% csrf_token %}
       {% include "lenses/lens_list_executive.html" with lenses=lenses %}
@@ -160,46 +172,47 @@
 </div>
 
 
-<div class="controls">
-
+<div>
+  <!-- The button class 'process-lenses' is required for functionality  -->
+  
   <!-- Neutral buttons - they don't change the database -->
-  <button type="submit" class="update btn btn-sm btn-secondary" form="ids-form" formaction="{% url 'lenses:lens-update' %}">
+  <button type="submit" id="update" class="btn btn-sm btn-secondary" form="ids-form" formaction="{% url 'lenses:lens-update' %}">
     <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
     Update lenses
   </button>
-  <button type="button" class="process-lenses make-collection btn btn-sm btn-secondary" data-form-url="{% url 'lenses:lens-make-collection' %}">
+  <button type="button" id="make-collection" class="process-lenses btn btn-sm btn-secondary" data-form-url="{% url 'lenses:lens-make-collection' %}">
     <img src="{% static 'icons/folder-fill.svg' %}" alt="collection">
     Make collection
   </button>
-  <button type="submit" class="collage btn btn-sm btn-secondary" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">
+  <button type="submit" id="collage" class="btn btn-sm btn-secondary" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">
     <img src="{% static 'icons/images.svg' %}" alt="image collage">
     Collage
   </button>
-
+  
   <!-- Action buttons - performing some action without any danger of exposing sensitive information -->
-  <button type="button" class="process-lenses make-private btn btn-sm btn-primary" data-form-url="{% url 'lenses:lens-make-private' %}">
+  <button type="button" id="make-private" class="process-lenses btn btn-sm btn-primary" data-form-url="{% url 'lenses:lens-make-private' %}">
     <img src="{% static 'icons/lock-fill.svg' %}" alt="lock">
     Make private
   </button>
-  <button type="button" class="process-lenses revoke-access btn btn-sm btn-primary" data-form-url="{% url 'lenses:lens-revoke-access' %}">
+  <button type="button" id="revoke-access" class="process-lenses btn btn-sm btn-primary" data-form-url="{% url 'lenses:lens-revoke-access' %}">
     <img src="{% static 'icons/person-dash-fill.svg' %}" alt="person minus">
     Revoke access
   </button>
-
+  
   <!-- Dangerous action buttons - revealing sensitive information if not used properly -->
-  <button type="button" class="process-lenses give-access btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-give-access' %}">
+  <button type="button" id="give-access" class="process-lenses btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-give-access' %}">
     <img src="{% static 'icons/person-plus-fill.svg' %}" alt="person plus">
     Give access
   </button>
-  <button type="button" class="process-lenses make-public btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-make-public' %}">
+  <button type="button" id="make-public" class="process-lenses btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-make-public' %}">
     <img src="{% static 'icons/people-fill.svg' %}" alt="people">
     Make public
   </button>
-  <button type="button" class="process-lenses cede-ownership btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-cede-ownership' %}">
+  <button type="button" id="cede-ownership" class="process-lenses btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-cede-ownership' %}">
     <img src="{% static 'icons/forward-fill.svg' %}" alt="arrow">
     Cede ownership
   </button>
-  <button type="button" class="process-lenses delete-lenses btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-delete' %}">
+  <button type="button" id="delete-lenses" class="process-lenses btn btn-sm btn-danger" data-form-url="{% url 'lenses:lens-delete' %}">
     <img src="{% static 'icons/trash.svg' %}" alt="trash">
     Delete lenses
   </button>
@@ -208,25 +221,14 @@
 
 
 {% block extrastyles %}
-<!-- <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"> -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<style>
-  .notifications td {margin:0px;padding:2px;}
-  .tasks td {margin:0px;padding:2px;}
-  .collections td {margin:0px;padding:2px;}
-  .exe_summary td {margin:0px;padding:2px;}
-</style>
 {% endblock extrastyles %}
 
 
 {% block extrascripts %}
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-<!-- <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script> -->
-<!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
-<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
 <script type="text/javascript">
   $(document).ready(function() {
@@ -234,7 +236,7 @@
 
 	  // Construct get query string
 	  var values = [];
-	  $('.content input[type="checkbox"]:checked').each(function (){
+	  $('#exe_summary input[type="checkbox"]:checked').each(function (){
 	      values.push( 'ids='+$(this).val() );
 	  });
 
@@ -255,10 +257,6 @@
 	      });
 	  }
 	  
-      });
-
-      $(".alert").fadeTo(3000,1000).slideUp(1000, function () {
-          $(".alert").slideUp(1000);
       });
   });
 </script>
