--- a/sled_groups/templates/sled_groups/group_list.html
+++ b/sled_groups/templates/sled_groups/group_list.html
@@ -43,7 +43,7 @@
   {% endif %}
 </div>
 
-<button type="button" id="create-new-group" class="btn btn-sm btn-secondary" data-form-url="{% url 'groups:group-add' %}">
+<button type="button" id="create-new-group" class="btn btn-sm btn-secondary" data-form-url="{% url 'sled_groups:group-add' %}">
   <img src="{% static 'icons/folder-fill.svg' %}" alt="group">
   Create new group
 </button>
