--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -60,7 +60,7 @@
     {% else %}
     <p>No groups to display</p>
     {% endif %}
-    <a href="{% url 'groups:group-list' %}">All my groups</a>
+    <a href="{% url 'sled_groups:group-list' %}">All my groups</a>
   </div>
 </div>
 
