--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -60,7 +60,7 @@
             {% with url_base=request.get_full_path %}
             <td class="{% if url_name in 'homepage,' %}selected{% endif %}"><a href="{% url 'home:homepage' %}">Home</a></td>
             <td class="{% if '/lenses/' in url_base %}selected{% endif %}"><a href="{% url 'lenses:lens-index' %}">Lenses</a></td>
-            <td class="{% if '/groups/' in url_base %}selected{% endif %}"><a href="{% url 'groups:group-list' %}">Groups</a></td>
+            <td class="{% if '/sled_groups/' in url_base %}selected{% endif %}"><a href="{% url 'sled_groups:group-list' %}">Groups</a></td>
             <td class="{% if '/users/' in url_base %}selected{% endif %}">
 	      {% if user.is_authenticated %}
               <a href="{% url 'users:user-profile' %}">{{ user.username }}</a>
