--- a/templates/home_index.html
+++ b/templates/home_index.html
@@ -1,5 +1,17 @@
 {% extends "master_header.html" %}
+{% load static %}
 
 {% block content %}
-<p>Home Page</p>
+<div class="flex-container-4 w-container">
+  <div>
+    <p class="heading-2">Welcome to the Strong Lensing Database</p>
+  </div>
+  <div class="hero-image-mask"><img src="{% static 'images/0HOME_Grid.png' %}" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 341.09375px, 503.453125px" srcset="{% static 'images/0HOME_Grid.png' %} 500w, {% static 'images/0HOME_Grid.png' %} 800w, {% static 'images/0HOME_Grid.png' %} 1098w" alt="" class="hero-image-2">
+  </div>
+</div>
+<div class="container-2 w-container">
+  <img src="{% static 'images/0HOME_EPFL.png' %}" loading="lazy" width="100" alt="" class="image-2">
+  <img src="{% static 'images/0HOME_ERC.png' %}" loading="lazy" width="75" alt="" class="image-3">
+  <img src="{% static 'images/0HOME_EU.png' %}" loading="lazy" height="65" alt="" class="image-4">
+</div>
 {% endblock %}
