Remove the bootstrap style file from tracking, and all of its inclusions in html files other than the master_header.html.

--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -10,7 +10,7 @@
     <!-- <script src="{% static 'lenses/js/sorttable.js' %}"></script> -->
 
     <!-- The line below is required to style the message -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     {% block extrastyles %}
     {% endblock extrastyles %}
     
