--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>Strong Gravitational Lens database</title>
 
-  {# <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}" /> #}
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}" /> -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/jb_style.css' %}" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">
