--- a/lenses/templates/lenses/lens_add_update.html
+++ b/lenses/templates/lenses/lens_add_update.html
@@ -1,17 +1,8 @@
 {% extends 'master_header.html' %}
 {% load static %}
+
+
 {% block content %}
-
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script type="text/javascript" src="{% static 'lenses/js/jquery.formset.js' %}"></script>
-<script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_add.css' %}"/>
-<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
-<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
 {% if request.resolver_match.url_name == 'lens-add' %}
 <h1>Add new lenses</h1>
 {% else %}
@@ -22,7 +13,7 @@
   To be within the check radius of existing lenses set RA= 8.368 and DEC= -5.6694
 </p>
 
-<form id="formset" formset-prefix="{{ lens_formset.prefix }}" method="POST">
+<form id="formset" formset-prefix="{{ lens_formset.prefix }}" method="POST" enctype="multipart/form-data">
   <div class="form-div">
     {% csrf_token %}
     {{ lens_formset.management_form }}
@@ -82,8 +73,12 @@
 		<td>
 		  <div class="column">
 		    <table>
-		      <tr><td colspan="3"><div class="lens-mugshot"><img src="{% static 'lenses/mugshots/'%}{{form.mugshot_name.value}}" style="width: 100%; height: auto;"></div></td></tr>
-		      <tr><td>{{ form.mugshot_name.errors }}</td><td>{{ form.mugshot_name.label_tag }}</td><td>{{ form.mugshot_name }}</td></tr>
+		      {% if form.instance.mugshot %}
+		      <tr><td colspan="3"><img class="sled-mugshot-image" src="{{form.instance.mugshot.url}}"></td></tr>
+		      {% else %}
+		      <tr><td colspan="3"><img class="sled-mugshot-image" src=""></td></tr>
+		      {% endif %}
+		      <tr><td>{{ form.mugshot.errors }}</td><td>{{ form.mugshot.label_tag }}</td><td>{{ form.mugshot }}</td></tr>
 		    </table>
 		  </div>
 		</td>
@@ -134,7 +129,40 @@
     </table>
   </div>
 </form>
-
-<!-- <script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script> -->
-
 {% endblock content %}
+
+
+
+{% block extrastyles %}
+<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_add.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+<style>
+  .sled-mugshot-image {width:250px;height:250px;}
+</style>
+{% endblock extrastyles %}
+
+
+
+{% block extrascripts %}
+<script type="text/javascript" src="{% static 'lenses/js/jquery.formset.js' %}"></script>
+<script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+      function readURL(input,$img) {
+	  if (input.files && input.files[0]) {
+              var reader = new FileReader();
+              reader.onload = function (e) {
+		  $img.attr('src', e.target.result);
+              }
+              reader.readAsDataURL(input.files[0]);
+	  }
+      }
+      $("input[name*='mugshot']").change(function(){
+	  var $img = $(this).parent().parent().parent().find('img');
+	  readURL(this,$img);
+      });
+  });
+</script>
+{% endblock extrascripts %}
