--- a/lenses/templates/lenses/lens_visit_card.html
+++ b/lenses/templates/lenses/lens_visit_card.html
@@ -17,7 +17,7 @@
       <td>
 	<!-- Lens image -->
 	<div class="img-container">
-	  <img src="{% static 'lenses/mugshots/'%}{{lens.mugshot_name}}" style="width: 10%; height: auto;">
+	  <img src="{{ lens.mugshot.url }}" style="width: 10%; height: auto;">
 	</div>
       </td>
     </tr>
