New way to handle duplicates works for adding lenses. Still need to make it work for UpdateLenses and MakePublic (i.e. with ids of existing lenses). First go at creating an api to upload lenses.

--- a/lenses/templates/lenses/lens_add_update.html
+++ b/lenses/templates/lenses/lens_add_update.html
@@ -14,33 +14,32 @@
 </p>
 
 <form id="formset" formset-prefix="{{ lens_formset.prefix }}" method="POST" enctype="multipart/form-data">
-  <div class="form-div">
+  <div>
     {% csrf_token %}
     {{ lens_formset.management_form }}
     {{ lens_formset.non_form_errors }}
     
-    <table class="master">
-      {% for form,existing in new_existing %}
-      
-      <tr class="copy-target">
+    <table id="sled-lenses-table">
+      {% for form in lens_formset.forms %}
+      <tr class="sled-copy-target">
 	<td>
 	  
-	  <div class="lens-form">
-	    <table class="controls">
+	  <div>
+	    <table>
 	      <tr>
-		<td><h3>Lens {{ forloop.counter }}</h3></td>
-		<td class="delete-button"></td>
+		<td><h3 class="sled-lens-counter">Lens {{ forloop.counter }}</h3></td>
+		<td class="sled-delete-button"></td>
 	      </tr>
 	    </table>
 
 	    {{ form.non_field_errors }}
 	    {{ form.id }}
 	    
-	    <table class="form-table">
+	    <table>
 	      <tr>
 		<!-- First column -->
 		<td>
-		  <div class="column">
+		  <div>
 		    <table>
 		      <tr><td>{{ form.ra.errors }}</td><td>{{ form.ra.label_tag }}</td><td>{{ form.ra }}</td></tr>
 		      <tr><td>{{ form.dec.errors }}</td><td>{{ form.dec.label_tag }}</td><td>{{ form.dec }}</td></tr>
@@ -53,11 +52,11 @@
 		    </table>
 		  </div>
 		</td>
-
-
+		
+		
 		<!-- Second column -->
 		<td>
-		  <div class="column">
+		  <div>
 		    <table>
 		      <tr><td>{{ form.n_img.errors }}</td><td>{{ form.n_img.label_tag }}</td><td>{{ form.n_img }}</td></tr>
 		      <tr><td>{{ form.lens_type.errors }}</td><td>{{ form.lens_type.label_tag }}</td><td>{{ form.lens_type }}</td></tr>
@@ -71,13 +70,9 @@
 
 		<!-- Fourth column -->
 		<td>
-		  <div class="column">
+		  <div>
 		    <table>
-		      {% if form.instance.mugshot %}
-		      <tr><td colspan="3"><img class="sled-mugshot-image" src="{{form.instance.mugshot.url}}"></td></tr>
-		      {% else %}
 		      <tr><td colspan="3"><img class="sled-mugshot-image" src=""></td></tr>
-		      {% endif %}
 		      <tr><td>{{ form.mugshot.errors }}</td><td>{{ form.mugshot.label_tag }}</td><td>{{ form.mugshot }}</td></tr>
 		    </table>
 		  </div>
@@ -89,24 +84,6 @@
 	  </div>
 	  
 	</td>
-	<td>
-
-	  {% if existing %}
-	  {{ form.insert.errors }}
-	  {{ form.insert.label_tag }}
-	  {{ form.insert }}
-	  {% endif %}
-	  
-	</td>
-	<td>
-	  
-	  {% if existing %}
-	  {% for lens in existing %}
-	  {% include 'lenses/lens_visit_card.html' with lens=lens %}
-	  {% endfor %}
-	  {% endif %}
-	  
-	</td>
       </tr>
       {% endfor %}
     </table>
@@ -115,11 +92,11 @@
   
   
   
-  <div class="button-div">
+  <div>
     <table>
       <tr>
 	{% if request.resolver_match.url_name == 'lens-add' %}
-	<td><div class="add-button"></div></td>
+	<td><div class="sled-add-button"></div></td>
 	<td><button id="toggle-access-level" type="button">Toggle access_level all</button></td>
 	<td><button type="submit">Create Lenses</button></td>
 	{% else %}
@@ -134,12 +111,7 @@
 
 
 {% block extrastyles %}
-<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_add.css' %}"/>
-<link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
-<style>
-  .sled-mugshot-image {width:250px;height:250px;}
-</style>
 {% endblock extrastyles %}
 
 
@@ -159,7 +131,7 @@
               reader.readAsDataURL(input.files[0]);
 	  }
       }
-      $("input[name*='mugshot']").change(function(){
+      $(document).on("change","input[name*='mugshot']",function(){
 	  var $img = $(this).parent().parent().parent().find('img');
 	  readURL(this,$img);
       });
