--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -14,11 +14,10 @@
 
 {% block content %}
 
-
   <div class="sign-up-wrap w-container">
     <div class="w-form">
 
-      <form id="email-form" class="form-2" method="post" action="{% url 'login' %}">
+      <form id="email-form" class="form-2" method="post" action="">
         <img src="{% static 'images/0SLED_Logo-Login.png' %}" loading="lazy" width="40" alt="" class="image-7">
         {% csrf_token %}
           <!--{{ form.as_p }} -->
