--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}" /> -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/jb_style.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/sled-global.css' %}" />
   {% block extrastyles %}
   {% endblock extrastyles %}
 
