--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -15,7 +15,7 @@
   {% block extrastyles %}
   {% endblock extrastyles %}
 
-  <script type="text/javascript" src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script src="https://use.typekit.net/pkl4bli.js" type="text/javascript"></script>
   <script type="text/javascript">
